# frida-core

./: meson.build
compiler/: compiler.vala  meson.build
